--- a/index.html
+++ b/index.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba</title>
-</head>
-<body>
-    <h1>hola mundo</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- linea para cambiar el icono e la pagina del buscador -->
+    <link rel="icon" type="imge/png" href="logo de empresa/logo empresa.png" />
+    <link rel="stylesheet" href="coming.css" />
+
+    <title>Inicio de pagina</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="content">
+        <h3 class="title">Proximamente estara lista</h3>
+        <p>
+          Proyecto de Control de procesos y pagina web proximamente Aleana & Carlup
+        </p>
+        <div class="count-down">
+          <div class="box">
+            <h3 id="day">00</h3>
+            <span>Dias</span>
+          </div>
+          <div class="box">
+            <h3 id="hour">00</h3>
+            <span>Horas</span>
+          </div>
+          <div class="box">
+            <h3 id="minute">00</h3>
+            <span>Minutos</span>
+          </div>
+          <div class="box">
+            <h3 id="second">00</h3>
+            <span>Segundos</span>
+          </div>
+        </div>
+      </div>
+      <div class="image">
+        <img src="imagenes/build.png" alt=" imagen de construccion" />
+      </div>
+    </div>
+    <script>
+      let countdate = new Date("dic 1, 2023 12:00:00").getTime();
+      function countDown() {
+        let now = new Date().getTime();
+        gap = countdate - now;
+        let second = 1000;
+        let minute = second * 60;
+        let hour = minute * 60;
+        let day = hour * 24;
+        let d = Math.floor(gap / day);
+        let h = Math.floor((gap % day) / hour);
+        let m = Math.floor((gap % hour) / minute);
+        let s = Math.floor((gap % minute) / second);
+        document.getElementById("day").innerText = d;
+        document.getElementById("hour").innerText = h;
+        document.getElementById("minute").innerText = m;
+        document.getElementById("second").innerText = s;
+      }
+      setInterval(function () {
+        countDown();
+      }, 1000);
+    </script>
+  </body>
 </html>
