--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <script>
-      let countdate = new Date("dic 1, 2023 12:00:00").getTime();
+      let countdate = new Date("dec 1, 2023 8:00:00").getTime();
       function countDown() {
         let now = new Date().getTime();
         gap = countdate - now;
